name:                pure-render
version:             0.7.0.0
synopsis:            
homepage:            github.com/grumply/pure-render
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Flag use-template-haskell
     Description: enable template haskell for a Lift SHTML instance
     Default: True
     Manual: True

library
  exposed-modules:
    Pure.Data.Render

  build-depends:
    base >= 4.8,
    pure-core >= 0.7 && < 1,
    pure-default >= 0.7 && < 1,
    pure-dom >= 0.7 && < 1,
    pure-json >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    containers

  if flag(use-template-haskell)
    cpp-options: -DUSE_TEMPLATE_HASKELL
    build-depends: template-haskell

  hs-source-dirs:      src

  default-language:    Haskell2010