name:                pure-render
version:             0.8.0.0
homepage:            purehs.org/doc/pure-render
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-render.git

Flag use-template-haskell
     Description: enable template haskell for a Lift SHTML instance
     Default: True
     Manual: True

library
  exposed-modules:
    Pure.Data.Render

  build-depends:
    base,
    pure-core,
    pure-default,
    pure-dom,
    pure-json,
    pure-lifted,
    pure-txt,
    containers

  if flag(use-template-haskell)
    cpp-options: -DUSE_TEMPLATE_HASKELL
    build-depends: template-haskell

  hs-source-dirs:      src

  default-language:    Haskell2010
